Update deploy.yml to use peaceiris/actions-gh-pages for gh-pages branch deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write # For pushing to gh-pages branch
-      pages: write    # For github pages deployment
-      id-token: write # For OpenID Connect (OIDC) authentication
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,11 +28,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './dist' # The directory containing your build output
-
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
