--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       contents: write # For pushing to gh-pages branch
     steps:
+      # This comment is added to force a re-evaluation of the workflow
       - name: Checkout
         uses: actions/checkout@v4
 
